[package]
name = "sh1122-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sh1122 = { path = "../sh1122" }
sh1122-rppal = { path = "../sh1122-rppal" }
rppal = { version = "0.13" }
freetype-rs = { version = "0.29" }
chrono = { version = "0.4" }
